translocon introductions drafted

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -88,7 +88,8 @@ That same study also found that in simulations, snorkelling, bilayer deformation
 \subsection{Hydrophobicity of transmembrane Segments}\label{ssection:hydrophobicityscales}
 
 Perhaps the most prevalent and important feature of the transmembrane regions is the membrane spanning region which is composed mostly of non-polar residues.
-More recently the hydrophobic group region has been associated with cell localisation and a broad range of biochemical functions~\cite{Junne2010, Wong2012}.
+The importance of hydrophobicity on the effectiveness of membrane anchoring has been known for some time~\cite{Davis1985}.
+More recently the hydrophobic group region has been associated with cell localisation and a broad range of biochemical functions~\cite{Junne2010, Sharpe2010, Wong2012}.
 
 Over the last 50 years or so, there have been many attempts to use hydrophobicity scales of residues to predict structural classifications of proteins.
 Due to the vast amounts of scales, major efforts have been made to compare them to identify which ones are better for which tasks of identifying structural elements~\cite{Simm2016, Peters2014}.
@@ -233,7 +234,7 @@ The proteins that allow life to use this biochemical barrier are perhaps equally
 Together, the lipid bilayer and proteins therein allow complex biochemical systems that facilitate life as we know it.
 
 It is critical to understand that the lipid bilayer and the transmembrane $\alpha$ helices are inextricably linked, and often what we observe from the $\alpha$ helices reflect the properties of the much harder to study membranes.
-For example, often \gls{tmh}s reflect the membrane environments they exist in, for example the hydrophobicity, asymetry, and thickness of the membrane lipids is reflected when looking at large numbers of \gls{tmp}s \cite{Sharpe2010}.
+For example, often \gls{tmh}s reflect the membrane environments they exist in, for example the hydrophobicity, asymetry, and thickness of the membrane lipids is reflected when looking at large numbers of \gls{tmp}s~\cite{Sharpe2010}.
 
 The lipid membranes influence the local structure, dynamics, and activity of proteins in the membrane in non-trivial ways~\cite{Bondar2010, Bondar2009, Jardon-Valadez2010, Kalvodova2005, Urban2005, White2001a, Jensen2004, Henin2014}, as well as protein folding~\cite{Kauko2010}.
 %Henin2014.
@@ -241,10 +242,10 @@ The lipid membranes influence the local structure, dynamics, and activity of pro
 
 \subsection{Lipids of the Membrane}
 
-The lipids that make up these membranes are very diverse, and not only do different cells have different membrane compositions, but so do different subcellular compartments which again is reflected in the \gls{tmh} composition of \gls{tmp}s \cite{Sharpe2010, VanMeer2008}.
+The lipids that make up these membranes are very diverse, and not only do different cells have different membrane compositions, but so do different subcellular compartments which again is reflected in the \gls{tmh} composition of \gls{tmp}s~\cite{Sharpe2010, VanMeer2008}.
 
 They consist of a polar head group and a hydrophobic region and so are described as being amphiphilic molecules.
-This factor, along with geometric contraints of the membrane lipids causes them to not only be insoluble molecules, but also that they readily self-associate into complex ordered structures that has been demonstrated \textit{in silico} with coarse grain \gls{md} simulations \cite{Scott2008}.
+This factor, along with geometric contraints of the membrane lipids causes them to not only be insoluble molecules, but also that they readily self-associate into complex ordered structures that has been demonstrated \textit{in silico} with coarse grain \gls{md} simulations~\cite{Scott2008}.
 This self association is entropically driven by water molecules.
 There is a rich variety of lipid molecules that make up the biological membranes.
 In other words, the bilayer forms from these phospholipid molecules due to the fierce dissociation between the polar water and the hydrophobic tails.
@@ -252,7 +253,7 @@ Furthermore, the bilayer maximises van der Waals interactions between the closel
 This can be seen even in relatively early \gls{md} simulations~\cite{Goetz1998}.
 
 The majority of lipids in higher organism membranes are phospholipids, sphingolipids, and sterols.
-The hydrophobicity of a membrane lipid can be caused by several features; (i) aliphatic chains such as in the most abundant membrane lipids, glycerophospholipids and the sphingolipids, (ii) aromatic groups, or (iii) polycyclic structures such as the sterols most abundantly of which in mammals is cholesterol  \cite{Helenius1975, Lichtenberg1983}.
+The hydrophobicity of a membrane lipid can be caused by several features; (i) aliphatic chains such as in the most abundant membrane lipids, glycerophospholipids and the sphingolipids, (ii) aromatic groups, or (iii) polycyclic structures such as the sterols most abundantly of which in mammals is cholesterol ~\cite{Helenius1975, Lichtenberg1983}.
 Phospholipids are composed of a glycerol molecule.
 Bonded to the glycerol molecule are two hydrophobic fatty acid tail groups and a negatively-charged polar phosphate group.
 The polar phosphate group is modified with an alcohol group.
@@ -260,14 +261,14 @@ The polar phosphate group is modified with an alcohol group.
 %At some point the membrane phases should be discussed.
 %Similar to the diagram here perhaps: http://popups.ulg.ac.be/1780-4507/index.php?id=6568
 
-It has been known for some time that biological bi-layer membranes are asymmetric \cite{Singer1972, OpdenKamp1979}.
-For example, in the outer membranes of Gram-negative bacteria, the outer membrane leaflet contain lipopolysaccharide, whilst the inner is a mixture of approximately 25 phospholipid types \cite{VanMeer2008}.
+It has been known for some time that biological bi-layer membranes are asymmetric~\cite{Singer1972, OpdenKamp1979}.
+For example, in the outer membranes of Gram-negative bacteria, the outer membrane leaflet contain lipopolysaccharide, whilst the inner is a mixture of approximately 25 phospholipid types~\cite{VanMeer2008}.
 Adding to the membrane asymmetry composition story, a thorough analysis of residue composition in yeast and human \gls{tmh} regions revealed intra-membrane leaflet composition asymmetry in the \gls{er}, but not the Golgi~\cite{Sharpe2010}.
 Furthermore, protein-lipid interactions have been shown to be determinants of membrane curvature~\cite{Jensen2004}, and undertake complex orientations and conformations to allow for hydrophobic mismatch~\cite{Planque2003}.
 
 The evolutionary theories behind these various membrane compositions emerging is complex and remains in dispute.
-A popular theory is that eukaryotic cells used mitochondria as the ATP synthesisers to provide an energetic boost, the result of which was a massive shift in the evolution of novel eukaryotic protein folds, membrane bound organelle structures, sexual reproduction, and complex inter-cellular cooperation in the form of multi-cellular organisms \cite{Lane2005, Lane2015}.
-A lot of this theory rested on the idea that mitochondrial membranes within the eukaryotic cells were energetically favorable, however more recent experimentation disputes this claim \cite{Lynch2017}.
+A popular theory is that eukaryotic cells used mitochondria as the ATP synthesisers to provide an energetic boost, the result of which was a massive shift in the evolution of novel eukaryotic protein folds, membrane bound organelle structures, sexual reproduction, and complex inter-cellular cooperation in the form of multi-cellular organisms~\cite{Lane2005, Lane2015}.
+A lot of this theory rested on the idea that mitochondrial membranes within the eukaryotic cells were energetically favorable, however more recent experimentation disputes this claim~\cite{Lynch2017}.
 
 Simply put, membrane potential is the voltage across a membrane.
 If the membrane is permeable to a certain type of ion, then the ion will experience an electrical pulling force during the diffusion process that pulls toward the ``preferred'' biological location.
@@ -310,6 +311,21 @@ No notable membrane potential has been identified in the Golgi~\cite{Schapiro200
 %Depth of secretion pathway (talk about translocons in depth here) & outline post-translational insertion
 \subsection{Translocation Overview}
 There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic post-translational translocation, bacterial post-translational insertion using the Tat system for folded proteins and the Sec system for unfolded proteins, and co-translational insertion in bacteria through the~\gls{htl} protein complex or its individual components.
+In bacteria nearly all \gls{tmp}s are inserted by either the Sec pathway via  SecYEG machinery, or by the structurally unrelated the 5\--fold more abundant YidC machinery \cite{Drew2003, Dalby2014}, and proteins can often use either pathway.
+
+The Sec pathway is conserved across all life~\cite{Cao2003} and is facillitated by the SecYEG (prokaryotic) and Sec61 (eukaryotic) translocons.
+SecYEG targets proteins to the \gls{pm} (inner membrane) of bacteria and Sec61 targets proteins to the \gls{er} of eukaryotic cells.
+Broadly speaking, these proteins translocate hydrophilic peptides across a membrane whilst also integrating sufficiently hydrophobic sequences to the membrane~\cite{Junne2010, Rapoport2012, Shao2011, Cymer2015}.
+Whilst ultimately the translocon machinery is built of multiple subunits, the \gls{tm} translocating protein itself is a 10 \gls{tmh} protein with an hourglass shaped interior pore~\cite{Berg2004} (SecY in prokaryotes or Sec61$\alpha$ in eukaryotes).
+When translocation is not occuring and the protein is idle, the hydrophobic core is constricted~\cite{Junne2010} and a lumenal plug is in place over the pore resulting in a seal across the \gls{tmp} pore~\cite{Tam2005, Junne2006}.
+During translocation the plug exits the pore, the constriction ring is opened, and a lateral gate opens between TMH2 and TMH3, and TMH7 and TMH8 to integrate \gls{tmh}s to the membrane~\cite{Berg2004}.
+Mutation experiments on these three features (the plug, contriction ring, and lateral gate) destabalised the closed state of the translocon and resulted in a protein localisation phenotype that suppressed inactivating mutations in signal sequences~\cite{Emr1981, Veenendaal2004, Li2007, Junne2007} and even caused transient channel openings in bacteria~\cite{Saparov2007}.
+\gls{sp}s in stalled nascent chains crosslinked to the lipid and to the translocon machinery \cite{Martoglio1995}, showing that there may be a holding space which exposes the \gls{tmh} to the membrane  interfacial environment before insertion is complete and this was verified by more recent \gls{em} structural study \cite{Gogala2014, Park2012}.
+
+In bacteria, the SecY protein is partly encircled by SecE which enhances it's stability in the membrane \cite{Kihara1995}
+ Sec$\beta$ and Sec$\gamma$
+
+
 
 \subsection{Co-translational Translocation}
 
