--- a/thesis.tex
+++ b/thesis.tex
@@ -59,6 +59,8 @@
 \newacronym{sr}{SR}{Signal Recognition Particle Receptor}
 \newacronym{ap}{AP}{Arrest Peptide}
 \newacronym{emc}{EMC}{ER Membrane protein Complex}
+\newacronym{em}{EM}{Electron microscopy}
+
 
 
 
